# VT-S5-Benchmark-Tracker

./: README.md  bugs.txt  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx  models.ts  theme.ts  utils.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
